# base_boilerplate

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.agents/: README.md
.agents/rules/: code-style-guide.md
.agents/workflows/: 01_pm_planner.md  02_architect.md  03_backend_dev.md  04_devops.md  05_qa_testing.md  06_docs_review.md
alembic/: env.py
alembic/versions/: 0e117b5df651_add_department_code_and_usergroups.py  586865ec5afd_rename_site_code_to_site.py  7e14272ce7b5_initial_migration.py  d141e5936044_add_hmg_sso_usergroup_and_user_models.py  ef66673e6c7b_add_department_code_to_user.py
app/: __init__.py  main.py
app/api/: __init__.py
app/core/: __init__.py  arq.py  audit.py  config.py  database.py  deps.py  redis.py  security.py  worker.py
app/crud/: __init__.py  base.py  user.py  user_group.py
app/models/: __init__.py  audit_log.py  base.py  enums.py  user.py  user_dashboard.py
app/schemas/: __init__.py  auth.py  base.py  token.py  user.py  user_group.py
app/services/: __init__.py  auth.py  superset.py  user.py  user_group.py
app/utils/: __init__.py  cache.py  exceptions.py  logging.py  rate_limit.py  routing.py  sse.py
docs/: login_architecture.md
k8s/: configmap.yaml  db.yaml  deployment.yaml  hpa.yaml  namespace.yaml  redis.yaml  secrets-guide.md  service.yaml  worker-deployment.yaml
scripts/: deploy_k8s.sh  deploy_local.ps1  deploy_local.sh  setup_test_db.py
tests/: __init__.py  conftest.py  test_auth.py  test_hmg_sso_e2e.py  test_users.py
(+49 files in other folders)
